src/assets/styles/markdown.scss
.markdown-content {
  iframe + iframe {
    margin-top: theme("spacing.4");
  }

  p + ol,
  p + ul {
    margin-top: 0;
  }

  li + li {
    margin-top: 0;
  }

  table {
    img {
      margin: 0;
    }
  }

  tr {
    th {
      @apply even:bg-neutral-200/40 dark:even:bg-dark-900/60;
    }
  }

  details {
    @apply rounded-lg border-l-4 border-primary-500 bg-white text-[#000] dark:bg-dark-900 dark:text-dark-200;

    summary {
      font-weight: theme("fontWeight.semibold");

      cursor: pointer;
      list-style: none;

      padding-left: 1.5rem;
      padding-right: 1.5rem;
      padding-top: 1rem;
      padding-bottom: 1rem;

      user-select: none;
    }

    &[open] {
      padding-left: 1.5rem;
      padding-right: 1.5rem;
      padding-top: 0;
      padding-bottom: 1rem;

      summary {
        padding-left: 0;
        padding-right: 0;
        padding-top: 1rem;
        padding-bottom: 1rem;
      }
    }
  }
}

